--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
             <id>randombox-repo</id>
             <url>http://repo.onarandombox.com/content/groups/public</url>
         </repository>
+        <repository>
+            <id>Plugin Metrics</id>
+            <url>http://repo.mcstats.org/content/repositories/public</url>
+        </repository>
     </repositories>
     <build>
         <finalName>${project.name}</finalName>
@@ -67,12 +71,17 @@
                     <artifactSet>
                         <includes>
                             <include>com.pneumaticraft.commandhandler:CommandHandler</include>
+                            <include>org.mcstats.bukkit:metrics-lite</include>
                         </includes>
                     </artifactSet>
                     <relocations>
                         <relocation>
                             <pattern>com.pneumaticraft.commandhandler</pattern>
                             <shadedPattern>net.lankylord.booksave.util.commandhandler</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>org.mcstats</pattern>
+                            <shadedPattern>net.lankylord.booksave.util.mcstats</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
@@ -98,6 +107,12 @@
             <artifactId>CommandHandler</artifactId>
             <version>7</version>
             <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mcstats.bukkit</groupId>
+            <artifactId>metrics-lite</artifactId>
+            <version>R6</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
