--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>net.lankylord</groupId>
     <artifactId>BookSave</artifactId>
-    <version>1.0--SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>BookSave</name>
@@ -100,7 +100,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.5.2-R0.1</version>
+            <version>1.5.2-R1.0</version>
         </dependency>
         <dependency>
             <groupId>com.pneumaticraft.commandhandler</groupId>
