--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,23 @@
-/target/
-/.idea/
+#maven
+/target
+
+# intellij
+.idea/
 *.iml
+*.ipr
+*.iws
+
+# netbeans
+/nbproject
+
+# eclipse
+/.classpath
 /.project
+/.settings
+/build.xml
+
+# various
+/build
+/bin
+/dist
+/manifest.mf
